Update footer contact location from Johannesburg to Dipompong

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <h4>CONTACT</h4><br>
                 <p>WhatsApp: 082 459 8656</p>
                 <p>Email: orders@ledium.co.za</p>
-                <p>Johannesburg, ZA</p>
+                <p>Dipompong, ZA</p>
             </div>
         </div>
         <div class="footer-bottom">
